- Add link to Members-List from the Membership list (click on the member-count value)
- Hide inactive memberships in the Members and Protection Rules pages
- Fix compatibility issue with the wp-recaptcha plugin
- Fix several php notices and warnings ("invalid argument", "undefined index", etc.)
- Fix protection of the Private Message feature in the BuddyPress Add-on
- Add new hook to observe status change of subscriptions: "ms_subscription_status-<status>"

1.0.0.4
----------------------------------------------------------------------
- Fix the import tool to import data from old Membership plugin correctly (recurring payments, subscription status and end date)
- Fix the i18n support, the plugin is translated correctly again
- Fix error message that was displayed when dates of dripped memberships were saved

1.0.0.3
----------------------------------------------------------------------
- Add better error handling to the upgrade routine
- Fix a major bug in the automatic import wizard that prevented the plugin from importing old Membership data
- Fix wrong redirect during setup wizard that ended in "Not allowed to view page" errors
- Fix some typos in admin pages
- Fix the protection rule for "Friendship Request" in the BuddyPress Add-on
- Fix a bug in the Coupons Add-on that discarded changes instead of saving them
- Rename page "Protected Content" to "Protection Rules"

1.0.0.2
----------------------------------------------------------------------
- Fix compatibility issues with PHP 5.2.4 - note that you still need PHP 5.3 to use the Stripe Gateways

1.0.0.1
----------------------------------------------------------------------
- Fix some PHP notices and warnings that did happen during first setup

Membership2 1.0.0.0
----------------------------------------------------------------------
- Plugin name changed from Protected Content to Membership2
- New network-wide protection mode added (see Membership2 > Help page)